--- a/q-learning-ann.ipynb
+++ b/q-learning-ann.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Q-Learning with ANN 🤖 🎛 ☎️ \n",
-    "> This is a demo of Q-learning for solving Reinforcement Learning (RL) problems. The challenge here is a frozen lake that is being solved via **Artificial Neural Network (ANN)** approach for Q-learning implementation. It serves as an example code for an [introduction story into RL on Medium](https://medium.com).\n",
+    "> This is a demo of Q-learning for solving Reinforcement Learning (RL) problems. The challenge here is a frozen lake that is being solved via **Artificial Neural Network (ANN)** approach for Q-learning implementation. It serves as an example code for an [introduction story into RL on Medium](https://towardsdatascience.com/lite-intro-into-reinforcement-learning-857ca5c924d9).\n",
     "\n",
     "<img src=\"img/ann-wall-e.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
     "\n",
