--- a/q-learning-ann.ipynb
+++ b/q-learning-ann.ipynb
@@ -671,10 +671,10 @@
     "    s = env.reset()\n",
     "    step = 0\n",
     "    while step < STEPS:\n",
-    "        # Take the action (index) that have the maximum expected future reward given that state\n",
+    "        # take the action that have the maximum expected future reward\n",
     "        a = run_epsilon_greedy_bandit(Q[s, :], BANDIT_ARMS, BANDIT_TRAINING, EPSILON, episode)\n",
     "        \n",
-    "        # enter the environemnt and get the experience from it\n",
+    "        # enter the environment and get the experience from it\n",
     "        observation, reward, done, info = env.step(a)\n",
     "\n",
     "        # change the state to observed state for the next iteration\n",
@@ -688,7 +688,7 @@
     "            print(\"The last action & state was:\")\n",
     "            env.render()\n",
     "            print(\"-----------------------------\")\n",
-    "            # - quit the episode\n",
+    "            # quit the episode\n",
     "            break\n",
     "\n",
     "        # continue looping\n",
