--- a/q-learning-ann.ipynb
+++ b/q-learning-ann.ipynb
@@ -682,7 +682,7 @@
     "\n",
     "        # check if the environment has been exited\n",
     "        if done:\n",
-    "            # print stats of this game\n",
+    "            # print results of each episode in this game\n",
     "            print(\"\\n-----------------------------\")\n",
     "            print(step, \"steps in episode\", episode)\n",
     "            print(\"The last action & state was:\")\n",
