--- a/q-learning-table.ipynb
+++ b/q-learning-table.ipynb
@@ -541,10 +541,10 @@
     "    s = env.reset()\n",
     "    step = 0\n",
     "    while step < STEPS:\n",
-    "        # Take the action (index) that have the maximum expected future reward given that state\n",
+    "        # take the action that have the maximum expected future reward\n",
     "        a = run_epsilon_greedy_bandit(Q[s, :], BANDIT_ARMS, BANDIT_TRAINING, EPSILON, episode)\n",
     "        \n",
-    "        # enter the environemnt and get the experience from it\n",
+    "        # enter the environment and get the experience from it\n",
     "        observation, reward, done, info = env.step(a)\n",
     "\n",
     "        # change the state to observed state for the next iteration\n",
@@ -552,7 +552,7 @@
     "\n",
     "        # check if the environment has been exited\n",
     "        if done:\n",
-    "            # print stats of game (episode, steps, and the last agent's state)\n",
+    "            # print results of each episode\n",
     "            print(\"\\n-----------------------------\")\n",
     "            print(step, \"steps in episode\", episode)\n",
     "            print(\"The last action & state was:\")\n",
