--- a/q-learning-table.ipynb
+++ b/q-learning-table.ipynb
@@ -558,7 +558,7 @@
     "            print(\"The last action & state was:\")\n",
     "            env.render()\n",
     "            print(\"-----------------------------\")\n",
-    "            # - quit the episode\n",
+    "            # quit the episode\n",
     "            break\n",
     "\n",
     "        # continue looping\n",
