--- a/q-learning-table.ipynb
+++ b/q-learning-table.ipynb
@@ -101,7 +101,7 @@
     "* the **discount factor (ɣ) can take values between 0 to 1**, where value of one means it is considering only long-term rewards (an agent is farsighted) & value of zero means it is considering only the current rewards (an agent is nearsighted)\n",
     "\n",
     "### Bandit 🔫 🤠 🐴\n",
-    "We will create an agent that **chooses actions** as if it were a **multiarmed bandit**. It is a famous problem from probability theory that was used to address decisions of gamblers playing slot machines in casinos. Here, tt can help us to address the exploration-exploitation dilemma in RL. This bandit will choose actions from supplied Q-values for a given state.\n",
+    "We will create an agent that **chooses actions** as if it were a **multiarmed bandit**. It is a famous problem from probability theory that was used to address decisions of gamblers playing slot machines in casinos. Here, it can help us to address the exploration-exploitation dilemma in RL. This bandit will choose actions from supplied Q-values for a given state.\n",
     "* the bandit will have **4 arms**, since we have 4 actions to choose at each state\n",
     "* we will use the **epsilon-greedy** strategy for the bandit, i.e. our agent will randomly choose actions by flipping a coin so as to either go explore or exploit the environment\n",
     "* the **epsilon can take values between 0 to 1**, where 0 means an agent will do no exploration whatsoever (100% exploitation) and 1 is all about exploration (0% exploitation)\n",
